--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                   <a class="nav-link" href=""> Contact </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Phone </a>
+                  <a class="nav-link" href=""> Pricing </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Hello </a>
+                  <a class="nav-link" href="">Profile</a>
                 </li>
               </ul>
             </div>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-lg-4 text-center">
             <i class="fa-solid fa-bullseye fa-5x"></i>
-            <h3>  Elite Clientele</h3>
+            <h3> Elite Clientele</h3>
             <p>We have all the dogs, the greatest dogs.</p>
           </div>
           <div class="col-lg-4 text-center">
@@ -104,7 +104,6 @@
           </div>
         </div>
       </div>
-      
     </section>
 
     <!-- Testimonials -->
@@ -114,7 +113,7 @@
         I no longer have to sniff other dogs for love. I've found the hottest
         Corgi on TinDog. Woof.
       </h2>
-      <img src="images/dog-img.jpg" alt="dog-profile" />
+      <img class="testimonials-image" src="images/dog-img.jpg" alt="dog-profile" />
       <em>Pebbles, New York</em>
 
       <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -125,10 +124,10 @@
     <!-- Press -->
 
     <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo" />
-      <img src="images/tnw.png" alt="tnw-logo" />
-      <img src="images/bizinsider.png" alt="biz-insider-logo" />
-      <img src="images/mashable.png" alt="mashable-logo" />
+      <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
+      <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
+      <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
+      <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
