--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>tinDog</title>
+  <title>tDog</title>
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -206,7 +206,7 @@
 
   <footer id="footer" class="text-center">
     <i class="fa-brands fa-twitter"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-facebook-square"></i><i class="fa-solid fa-envelope"></i> 
-    <p>© Copyright TinDog</p>
+    <p>© 2022 Copyright TDog</p>
   </footer>
 </div>  
 </body>
